# FrogifyBackend

./: Cargo.toml  readme.md  weather.html
src/: main.rs
src/Router/: FirebaseAccessPoint.rs  FromApis.rs  Hash.rs  mod.rs
src/Router/Account/: ChangePassword.rs  ChangeProfilePicture.rs  ChangeUsername.rs  DeleteAccount.rs  GetAccount.rs  GetTotalLikes.rs  mod.rs
src/Router/Auth/: Login.rs  Register.rs  mod.rs
src/Router/Database/: Checkers.rs  MongoClient.rs  mod.rs
src/Router/Infos/: Echo.rs  PrattelnPosts.rs  Weather.rs  mod.rs
src/Router/Intern/: mod.rs
src/Router/Intern/Database/: Checkers.rs  MongoClient.rs  mod.rs
src/Router/Post/: CreatePost.rs  DeletePost.rs  GetAllPosts.rs  GetPost.rs  LikePost.rs  UnlikePost.rs  mod.rs
static/: avatarGenerator.html  indede.html  index.html  script.js  scroll.html  styles.css
static/dangerBox/: index.html  styles.css
static/displayPosts/: app.js  index.html  style.css
static/toolbo/: index.html  script.js  styles.css
test/: python.py
