[package]
name = "Helvetica"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.0.0", features = ["full"] }
actix-rt = "2.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
actix-files = "0.6.2"
actix-cors = "0.6.4"
sha2 = "0.10.6"
chrono = "0.4.19"
mongoose = "0.1.12"
bson = "2.0.0"
env_logger = "0.10.0"
regex = "1.5.4"
base64 = "0.21.0"
reqwest = "0.11.6"
futures-util = "0.3.17"